--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html, body {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.2px;
+  outline: none;
 }
 
 .but__dark {
@@ -36,6 +37,7 @@ html, body {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.2px;
+  outline: none;
 }
 
 .logo {
@@ -46,6 +48,10 @@ html, body {
 .logo img {
   width: 100%;
   height: 100%;
+}
+
+header {
+  padding-top: 33px;
 }
 
 header .header_content {
@@ -116,6 +122,8 @@ header .header_content .but__transparent {
 .hero .hero__buttons .but__transparent {
   width: 178px;
   border-color: #ffffff;
+  color: #ffffff;
+  margin-left: 13px;
 }
 
 .hero .hero__img {
@@ -147,10 +155,6 @@ header .header_content .but__transparent {
   padding: 0;
 }
 
-.dark {
-  background: linear-gradient(230.95deg, #CB1AE8 -0.37%, #37BDA6 100%);
-}
-
 .built_specifically {
   margin-top: 51px;
 }
@@ -172,6 +176,15 @@ header .header_content .but__transparent {
           justify-content: space-between;
 }
 
+@media (max-width: 600px) {
+  .built_specifically .built_specifically__content {
+    display: block;
+  }
+  .built_specifically .built_specifically__content_card {
+    margin: 0 auto;
+  }
+}
+
 .built_specifically .built_specifically__content_card {
   width: 401px;
   border: 1px solid #dedede;
@@ -187,9 +200,8 @@ header .header_content .but__transparent {
   margin-top: 60px;
 }
 
-.built_specifically .built_specifically__content_card_img img {
-  width: 100%;
-  height: 100%;
+.built_specifically .built_specifically__content_card_img svg {
+  fill: #03D6F3;
 }
 
 .built_specifically .built_specifically__content_card .third_titel {
@@ -217,8 +229,17 @@ header .header_content .but__transparent {
   color: #03d6f3;
 }
 
-.built_specifically .built_specifically__content_card.dark .third_titel, .built_specifically .built_specifically__content_card.dark p, .built_specifically .built_specifically__content_card.dark a {
+.built_specifically .built_specifically__content_card:hover {
+  background: linear-gradient(230.95deg, #CB1AE8 -0.37%, #37BDA6 100%);
+  width: 406px;
+}
+
+.built_specifically .built_specifically__content_card:hover .third_titel, .built_specifically .built_specifically__content_card:hover p, .built_specifically .built_specifically__content_card:hover a {
   color: #ffffff;
+}
+
+.built_specifically .built_specifically__content_card:hover svg {
+  fill: white;
 }
 
 .process {
@@ -393,12 +414,55 @@ header .header_content .but__transparent {
   margin-bottom: 30px;
 }
 
+@media (max-width: 600px) {
+  .your_team .second_titel, .your_team p {
+    text-align: left;
+  }
+}
+
 .your_team__pricing {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.your_team__pricing-order {
+  padding-top: 50px;
+  padding-bottom: 40px;
+  border: 1px solid #dedede;
+  border-radius: 10px;
+  width: 335px;
+}
+
+.your_team__pricing-order .third_titel {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.your_team__pricing-order p {
+  margin-top: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  letter-spacing: 0.1px;
+  color: #5c5c5c;
+}
+
+.your_team__pricing-order_img {
+  width: 259px;
+  margin: 0 auto;
+}
+
+.your_team__pricing-order_img img {
+  width: 100%;
+  height: 100%;
+}
+
+.your_team__pricing-order_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=main.css.map */
