--- a/css/main.scss
+++ b/css/main.scss
@@ -79,6 +79,10 @@ header{
         margin: 127px auto 0 auto;
         color: #ffffff;
         letter-spacing: 0.2px;
+        @media (max-width:600px){
+            width: 307px;
+            margin: 55px auto 0 auto;
+        }
     }
     & p{
         text-align: center;
@@ -88,6 +92,9 @@ header{
         font-weight: bold;
         font-size: 16px;
         letter-spacing: 0.2px;
+        @media (max-width:600px){
+            width: 334px;
+        }
         
         
     }
@@ -95,6 +102,17 @@ header{
         margin: 71px auto 0 auto;
         display: flex;
         width: 375px;
+        @media (max-width:600px){
+            display: block;
+            & .but__dark{
+                width: 252px;
+                margin: 55px auto 13px auto;
+            }
+            & .but__transparent{
+                width: 252px;
+                margin: 0 auto 95px auto;
+            }
+        }
          & .but__dark{
             width: 184px;
             background-color: #ffffff;
@@ -111,6 +129,11 @@ header{
         margin: 101px auto 0 auto;
         width: 1021.5px;
         padding-bottom: 85px;
+        @media (max-width:600px){
+            width: 364px;
+            margin: 0 auto;
+           
+        }
         
         & .hero__img img{
             width: 100%;
@@ -143,6 +166,9 @@ header{
         margin: 0 auto;
         text-align: center;
         width: 765px;
+        @media (max-width:600px) {
+            width: 282px;
+        }
     }
     & &__content{
         margin-top: 101px;
@@ -151,8 +177,8 @@ header{
         @media (max-width:600px) {
             display: block;
             &_card{
-                margin: 0 auto;
-                
+                margin: 45px auto 64px auto;
+
             }
         }
         &_card{
