added media and last section

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html, body {
 
 .container {
   width: 1283px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -99,6 +100,8 @@ header .header_content .but__transparent {
   .hero h1 {
     width: 307px;
     margin: 55px auto 0 auto;
+    font-weight: 500;
+    font-size: 46px;
   }
 }
 
@@ -123,20 +126,30 @@ header .header_content .but__transparent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 375px;
 }
 
 @media (max-width: 600px) {
   .hero .hero__buttons {
-    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 55px;
   }
   .hero .hero__buttons .but__dark {
     width: 252px;
-    margin: 55px auto 13px auto;
+    margin: 0 auto 13px auto;
   }
   .hero .hero__buttons .but__transparent {
     width: 252px;
-    margin: 0 auto 95px auto;
+    margin: 0 auto 0 auto;
   }
 }
 
@@ -150,12 +163,12 @@ header .header_content .but__transparent {
   width: 178px;
   border-color: #ffffff;
   color: #ffffff;
-  margin-left: 13px;
 }
 
 .hero .hero__img {
   margin: 101px auto 0 auto;
   width: 1021.5px;
+  max-width: 100%;
   padding-bottom: 85px;
 }
 
@@ -163,6 +176,10 @@ header .header_content .but__transparent {
   .hero .hero__img {
     width: 364px;
     margin: 0 auto;
+    margin-top: 95px;
+  }
+  .hero .hero__img img {
+    width: 100%;
   }
 }
 
@@ -191,6 +208,12 @@ header .header_content .but__transparent {
 
 .built_specifically {
   margin-top: 51px;
+}
+
+@media (max-width: 600px) {
+  .built_specifically {
+    margin-top: 47px;
+  }
 }
 
 .built_specifically .second_titel {
@@ -288,6 +311,14 @@ header .header_content .but__transparent {
   padding-bottom: 110px;
 }
 
+@media (max-width: 600px) {
+  .process {
+    margin-top: 47px;
+    padding-top: 58px;
+    padding-bottom: 262px;
+  }
+}
+
 .process .process__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -296,9 +327,28 @@ header .header_content .but__transparent {
       justify-content: space-around;
 }
 
+@media (max-width: 600px) {
+  .process .process__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+}
+
 .process .process__content_text {
   width: 495px;
   margin: auto 0;
+}
+
+@media (max-width: 600px) {
+  .process .process__content_text {
+    width: 335px;
+  }
 }
 
 .process .process__content_text .second_titel {
@@ -314,6 +364,15 @@ header .header_content .but__transparent {
   margin-bottom: 36px;
 }
 
+@media (max-width: 600px) {
+  .process .process__content_text-button {
+    position: absolute;
+    bottom: -214px;
+    left: auto;
+    z-index: 3;
+  }
+}
+
 .process .process__content_text-button .but__dark {
   width: 216px;
   background: #03D6F3;
@@ -323,6 +382,12 @@ header .header_content .but__transparent {
   color: #ffffff;
 }
 
+@media (max-width: 600px) {
+  .process .process__content_text-button .but__dark {
+    width: 338px;
+  }
+}
+
 .process .process__content_text-button .but__transparent {
   width: 203px;
   color: #30D7BA;
@@ -330,8 +395,25 @@ header .header_content .but__transparent {
           box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
 }
 
+@media (max-width: 600px) {
+  .process .process__content_text-button .but__transparent {
+    width: 338px;
+    margin-top: 22px;
+  }
+}
+
 .process .process__content_img {
   width: 516px;
+  max-width: 100%;
+}
+
+@media (max-width: 600px) {
+  .process .process__content_img {
+    width: 463px;
+  }
+  .process .process__content_img img {
+    width: 100%;
+  }
 }
 
 .process .process__content_img img {
@@ -343,6 +425,14 @@ header .header_content .but__transparent {
   margin-top: 51px;
   padding-top: 110px;
   padding-bottom: 110px;
+}
+
+@media (max-width: 600px) {
+  .operation {
+    margin-top: 47px;
+    padding-top: 58px;
+    padding-bottom: 100px;
+  }
 }
 
 .operation .operation__content {
@@ -357,9 +447,28 @@ header .header_content .but__transparent {
       justify-content: space-around;
 }
 
+@media (max-width: 600px) {
+  .operation .operation__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+}
+
 .operation .operation__content_text {
   width: 525px;
   margin: auto 0;
+}
+
+@media (max-width: 600px) {
+  .operation .operation__content_text {
+    width: 335px;
+  }
 }
 
 .operation .operation__content_text p {
@@ -380,11 +489,30 @@ header .header_content .but__transparent {
   color: #ffffff;
 }
 
-.operation .operation__content_text_img {
-  width: 516px;
+@media (max-width: 600px) {
+  .operation .operation__content_text .but__dark {
+    position: absolute;
+    bottom: -102px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    z-index: 3;
+  }
 }
 
-.operation .operation__content_text_img img {
+.operation .operation__content_img {
+  width: 516px;
+  max-width: 100%;
+}
+
+@media (max-width: 600px) {
+  .operation .operation__content_img {
+    width: 463px;
+    margin: 0 auto;
+  }
+}
+
+.operation .operation__content_img img {
   width: 100%;
   height: 100%;
 }
@@ -395,6 +523,14 @@ header .header_content .but__transparent {
   padding-bottom: 73px;
 }
 
+@media (max-width: 600px) {
+  .solution {
+    margin-top: 47px;
+    padding-top: 72px;
+    padding-bottom: 296px;
+  }
+}
+
 .solution .solution__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -403,9 +539,32 @@ header .header_content .but__transparent {
       justify-content: space-around;
 }
 
+@media (max-width: 600px) {
+  .solution .solution__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+}
+
 .solution .solution__content_text {
   width: 426px;
+  max-width: 100%;
   margin: auto 0;
+}
+
+@media (max-width: 600px) {
+  .solution .solution__content_text {
+    width: 374px;
+  }
+  .solution .solution__content_text .second_titel {
+    text-align: center;
+  }
 }
 
 .solution .solution__content_text p {
@@ -417,6 +576,43 @@ header .header_content .but__transparent {
   margin-bottom: 37px;
 }
 
+@media (max-width: 600px) {
+  .solution .solution__content_text p {
+    text-align: center;
+    width: 352px;
+    margin-top: 27px;
+    margin-bottom: 0%;
+  }
+}
+
+.solution .solution__content_text-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 441px;
+}
+
+@media (max-width: 600px) {
+  .solution .solution__content_text-buttons {
+    position: absolute;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: -234px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    z-index: 3;
+  }
+}
+
 .solution .solution__content_text-buttons .but__dark {
   width: 216px;
   background: #03D6F3;
@@ -426,6 +622,13 @@ header .header_content .but__transparent {
   color: #ffffff;
 }
 
+@media (max-width: 600px) {
+  .solution .solution__content_text-buttons .but__dark {
+    width: 294px;
+    height: 76px;
+  }
+}
+
 .solution .solution__content_text-buttons .but__transparent {
   width: 203px;
   color: #30D7BA;
@@ -433,11 +636,28 @@ header .header_content .but__transparent {
           box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
 }
 
-.solution .solution__content_img {
-  width: 762px;
+@media (max-width: 600px) {
+  .solution .solution__content_text-buttons .but__transparent {
+    width: 294px;
+    height: 76px;
+    margin-top: 13px;
+  }
 }
 
-.solution .solution__content_img img {
+.solution .solution__content-img {
+  width: 762px;
+  max-width: 100%;
+}
+
+@media (max-width: 600px) {
+  .solution .solution__content-img {
+    width: 463px;
+    margin: 0 auto;
+    margin-top: 71px;
+  }
+}
+
+.solution .solution__content-img img {
   width: 100%;
   height: 100%;
 }
@@ -448,16 +668,18 @@ header .header_content .but__transparent {
   padding-bottom: 83px;
 }
 
+@media (max-width: 600px) {
+  .your_team {
+    margin-top: 47px;
+    padding-top: 60px;
+    padding-bottom: 103px;
+  }
+}
+
 .your_team .second_titel, .your_team p {
   margin: 0 auto;
   text-align: center;
   margin-bottom: 30px;
-}
-
-@media (max-width: 600px) {
-  .your_team .second_titel, .your_team p {
-    text-align: left;
-  }
 }
 
 .your_team__pricing {
@@ -468,7 +690,23 @@ header .header_content .but__transparent {
       justify-content: space-around;
 }
 
+@media (max-width: 600px) {
+  .your_team__pricing {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .your_team__pricing-order {
+  margin-top: 63px;
   padding-top: 50px;
   padding-bottom: 40px;
   border: 1px solid #dedede;
@@ -495,6 +733,12 @@ header .header_content .but__transparent {
   margin: 0 auto;
 }
 
+@media (max-width: 600px) {
+  .your_team__pricing-order_img {
+    width: 262px;
+  }
+}
+
 .your_team__pricing-order_img img {
   width: 100%;
   height: 100%;
@@ -504,5 +748,174 @@ header .header_content .but__transparent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 148px;
+  height: 61px;
+}
+
+.your_team__pricing-order_price-cost h1 {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900;
+  font-size: 55px;
+  letter-spacing: 0.2px;
+  color: #30d7ba;
+  margin: 0;
+}
+
+.your_team__pricing-order_price-currency {
+  padding-left: 10px;
+}
+
+.your_team__pricing-order_price-currency .third_titel {
+  color: #30d7ba;
+  margin: 0;
+  text-align: left;
+}
+
+.your_team__pricing-order_price-currency p {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 0.1px;
+  margin: 5px 0 0 0;
+  color: #5c5c5c;
+}
+
+.your_team__pricing-order ul {
+  margin: 0 auto;
+  margin-top: 45px;
+  padding: 0;
+}
+
+.your_team__pricing-order ul li {
+  text-align: center;
+  margin-top: 20px;
+  list-style-type: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+}
+
+.your_team__pricing-order > .but__dark {
+  width: 251px;
+  background: #03D6F3;
+  border-color: #03D6F3;
+  -webkit-box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+  margin: 40px 42px 0 42px;
+}
+
+.line {
+  width: 868px;
+  height: 0;
+  margin: 0 auto;
+  margin-top: 51px;
+  margin-bottom: 51px;
+  border-bottom: 1px solid #cdcdcd;
+}
+
+@media (max-width: 600px) {
+  .line {
+    width: 453px;
+    margin: 47px 0 47px 0;
+  }
+}
+
+.subscribe .second_titel {
+  width: 241px;
+  margin: 0 auto;
+  margin-top: 72px;
+}
+
+.subscribe p {
+  width: 358px;
+  margin: 0 auto;
+  margin-top: 27px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 0.2px;
+  color: #5c5c5c;
+}
+
+.subscribe__content {
+  width: 471px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+  margin-top: 69px;
+  margin-bottom: 62px;
+}
+
+@media (max-width: 600px) {
+  .subscribe__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.subscribe__content input {
+  width: 284px;
+  height: 52px;
+  background: #efefef;
+  border: 1px solid #d0d0d0;
+  border-radius: 6px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  color: #5c5c5c;
+}
+
+@media (max-width: 600px) {
+  .subscribe__content input {
+    width: 483px;
+    height: 56px;
+    border-radius: 7px;
+  }
+}
+
+.subscribe__content .but__dark {
+  width: 177px;
+  background: #03D6F3;
+  border-color: #03D6F3;
+  -webkit-box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+}
+
+@media (max-width: 600px) {
+  .subscribe__content .but__dark {
+    width: 483px;
+    height: 62px;
+    border-radius: 6px;
+    margin-top: 12px;
+  }
+}
+
+footer .fon {
+  background: #112d57;
+}
+
+footer .footer__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 /*# sourceMappingURL=main.css.map */
