--- a/css/main.css
+++ b/css/main.css
@@ -917,5 +917,63 @@ footer .footer__content {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  padding-top: 62px;
+}
+
+@media (max-width: 600px) {
+  footer .footer__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+footer .footer__content_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 24px;
+  width: 397px;
+}
+
+footer .footer__content_items ul {
+  margin: 0 auto;
+  padding: 0;
+}
+
+footer .footer__content_items ul li {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+footer .footer__content .footer__content_img {
+  width: 334px;
+  margin: 0 auto;
+}
+
+@media (max-width: 600px) {
+  footer .footer__content .footer__content_img {
+    margin-top: 87px;
+  }
+}
+
+footer .footer__content .footer__content_img img {
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
