--- a/css/main.scss
+++ b/css/main.scss
@@ -67,7 +67,7 @@ header{
             
         }
     }
-}
+}    
 
 .hero{
     
@@ -696,5 +696,44 @@ footer{
     & .footer__content{
         display: flex;
         justify-content: space-around;
+        padding-top: 62px;
+        @media (max-width:600px){
+            flex-direction: column;
+            align-items: center;
+        }
+        &_items{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 24px;
+            width: 397px;
+            & ul{
+                margin: 0 auto;
+                padding: 0;
+                li{
+                    text-align: center;
+                    margin: 0;
+                    padding: 0;
+                    list-style-type: none;
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 400;
+                    font-size: 15px;
+                    letter-spacing: 0.2px;
+                    color: #ffffff;
+                    margin-bottom: 20px;
+                }
+            }
+            
+        }
+        & .footer__content_img{
+            width: 334px;
+            margin: 0 auto;
+            @media (max-width:600px){
+                margin-top: 87px;
+            }
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 }
